--- a/WhaleWhaleWhale/Whale Tail.ipynb
+++ b/WhaleWhaleWhale/Whale Tail.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -46,17 +46,8 @@
       "The whale dataset is a folder named `train` with whale images names.\n",
       "The whale dataset contains a `train.csv` which maps image name with Id\n",
       "\n",
-      "          Image         Id\n",
-      "0  00022e1a.jpg  w_e15442c\n",
-      "1  000466c4.jpg  w_1287fbc\n",
-      "2  00087b01.jpg  w_da2efe0\n",
-      "3  001296d5.jpg  w_19e5482\n",
-      "4  0014cfdf.jpg  w_f22f3e3\n",
-      "5  0025e8c2.jpg  w_8b1ca89\n",
-      "6  0026a8ab.jpg  w_eaad6a8\n",
-      "7  0031c258.jpg  new_whale\n",
-      "8  0035632e.jpg  w_3d0bc7a\n",
-      "9  0037e7d3.jpg  w_50db782\n",
+      "['w_e15442c' 'w_1287fbc' 'w_da2efe0' 'w_19e5482' 'w_f22f3e3' 'w_8b1ca89'\n",
+      " 'w_eaad6a8' 'new_whale' 'w_3d0bc7a' 'w_50db782']\n",
       "\n",
       "There are some whales which are not identifed and thus labelled `new_whale`\n"
      ]
@@ -69,7 +60,7 @@
     "\n",
     "print(\"The whale dataset is a folder named `train` with whale images names.\")\n",
     "print(\"The whale dataset contains a `train.csv` which maps image name with Id\\n\")\n",
-    "print(train_data.head(10))\n",
+    "print(training_labels[:10].flatten())\n",
     "print(\"\\nThere are some whales which are not identifed and thus labelled `new_whale`\")"
    ]
   },
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 152,
    "metadata": {
     "scrolled": false
    },
@@ -2504,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2541,26 +2532,6 @@
       "w_0175a35      1\n",
       "w_018bc64      1\n",
       "w_01a4234      1\n",
-      "w_01a51a6      3\n",
-      "w_01a99a5      1\n",
-      "w_01ab6dc      1\n",
-      "w_01b2250      3\n",
-      "w_01c2cb0      2\n",
-      "w_01cbcbf      1\n",
-      "w_01d6ca0      1\n",
-      "w_01e1223      1\n",
-      "w_01f211f      2\n",
-      "w_01f8a43      1\n",
-      "w_01f9086      1\n",
-      "w_024358d      3\n",
-      "w_0245a27      1\n",
-      "w_0265cb6      2\n",
-      "w_026fdf8      2\n",
-      "w_028ca0d      1\n",
-      "w_029013f      1\n",
-      "w_02a768d      2\n",
-      "w_02b775b      2\n",
-      "w_02bb4cf      3\n",
       "Name: Id, dtype: int64\n"
      ]
     }
@@ -2568,7 +2539,116 @@
    "source": [
     "new_df = pd.value_counts(train_data.Id).sort_index()\n",
     "new_df.columns = ['Id', 'frequency']\n",
-    "print (new_df[:50])"
+    "print (new_df[:30])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One hot encoding\n",
+    "\n",
+    "The labels, `w_0265cb6`, `w_029013f` are string values and need to be one-hot encoded so that our network can train on them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['w_e15442c' 'w_1287fbc' 'w_da2efe0' 'w_19e5482' 'w_f22f3e3' 'w_8b1ca89'\n",
+      " 'w_eaad6a8' 'new_whale' 'w_3d0bc7a' 'w_50db782']\n",
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n",
+      "  (0, 0)\t1.0\n",
+      "  (1, 0)\t1.0\n",
+      "  (2, 0)\t1.0\n",
+      "  (3, 0)\t1.0\n",
+      "  (4, 0)\t1.0\n",
+      "  (5, 0)\t1.0\n",
+      "  (6, 0)\t1.0\n",
+      "  (7, 0)\t1.0\n",
+      "  (8, 0)\t1.0\n",
+      "  (9, 0)\t1.0\n",
+      "  (10, 0)\t1.0\n",
+      "  (11, 0)\t1.0\n",
+      "  (12, 0)\t1.0\n",
+      "  (13, 0)\t1.0\n",
+      "  (14, 0)\t1.0\n",
+      "  (15, 0)\t1.0\n",
+      "  (16, 0)\t1.0\n",
+      "  (17, 0)\t1.0\n",
+      "  (18, 0)\t1.0\n",
+      "  (19, 0)\t1.0\n",
+      "  (20, 0)\t1.0\n",
+      "  (21, 0)\t1.0\n",
+      "  (22, 0)\t1.0\n",
+      "  (23, 0)\t1.0\n",
+      "  (24, 0)\t1.0\n",
+      "  :\t:\n",
+      "  (41872325, 0)\t1.0\n",
+      "  (41872326, 0)\t1.0\n",
+      "  (41872327, 0)\t1.0\n",
+      "  (41872328, 0)\t1.0\n",
+      "  (41872329, 0)\t1.0\n",
+      "  (41872330, 0)\t1.0\n",
+      "  (41872331, 0)\t1.0\n",
+      "  (41872332, 0)\t1.0\n",
+      "  (41872333, 0)\t1.0\n",
+      "  (41872334, 0)\t1.0\n",
+      "  (41872335, 0)\t1.0\n",
+      "  (41872336, 0)\t1.0\n",
+      "  (41872337, 0)\t1.0\n",
+      "  (41872338, 0)\t1.0\n",
+      "  (41872339, 0)\t1.0\n",
+      "  (41872340, 0)\t1.0\n",
+      "  (41872341, 0)\t1.0\n",
+      "  (41872342, 0)\t1.0\n",
+      "  (41872343, 0)\t1.0\n",
+      "  (41872344, 0)\t1.0\n",
+      "  (41872345, 0)\t1.0\n",
+      "  (41872346, 0)\t1.0\n",
+      "  (41872347, 0)\t1.0\n",
+      "  (41872348, 0)\t1.0\n",
+      "  (41872349, 0)\t1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelBinarizer, OneHotEncoder\n",
+    "\n",
+    "label_binarizer = LabelBinarizer()\n",
+    "classes = label_binarizer.fit_transform(training_labels.T[0])\n",
+    "#print(training_labels.shape)\n",
+    "print(training_labels.T[0][:10])\n",
+    "print(classes)\n",
+    "#print(\"Total number of labels '{}'\\nAll the classes: {}\".format(len(classes)), classes)\n",
+    "\n",
+    "\n",
+    "one_hot = OneHotEncoder()\n",
+    "classes = one_hot.fit_transform(classes.reshape(-1, 1))\n",
+    "print(classes)\n",
+    "\n",
+    "# for index, item in new_df.iterrows():\n",
+    "#     print(item[\"Id\"])\n",
+    "\n",
+    "# from keras.utils import to_categorical\n",
+    "\n",
+    "# print(\"Before one-hot encoding:\\n {}\".format(training_labels[:10]))\n",
+    "\n",
+    "# training_labels = to_categorical(training_labels)\n",
+    "\n",
+    "# print(\"\\n\\nAfter one-hot encoding:\\n {}\".format(training_labels))\n",
+    "#for idx, val in enumerate(map(lambda x : 1/x, ))"
    ]
   },
   {
