[MNIST] Add description to explain our steps

--- a/MNIST/MNIST Notebook.ipynb
+++ b/MNIST/MNIST Notebook.ipynb
@@ -336,6 +336,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training on data\n",
+    "\n",
+    "We are splitting the provides training data into training and validation to guide the model towards accuracy. We have to do this because test.csv is not labelled and is only provided for us to predict the values for submission."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -411,6 +420,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict on data\n",
+    "\n",
+    "Now that we have trained our model, we would take the evaluation data from `train.csv`, reshape it and pass it through the predict method or the model.\n",
+    "\n",
+    "Once we get the probability values of each data point, we just end up taking the maximum probability class for each provided data entry."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -428,6 +448,15 @@
     "y_evaluate = model.predict(x_evaluate)\n",
     "classes_evaluate = np.argmax(y_evaluate, axis=1)\n",
     "print(classes_evaluate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the data to csv\n",
+    "\n",
+    "We create a dataframe to save our predicted values in the provided csv format for submission."
    ]
   },
   {
