--- a/MNIST/MNIST Notebook.ipynb
+++ b/MNIST/MNIST Notebook.ipynb
@@ -461,16 +461,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_classes=[(idx,val) for idx, val in enumerate(classes_evaluate)]"
+    "final_classes=[(idx+1,val) for idx, val in enumerate(classes_evaluate)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -500,74 +500,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
+       "      <th>27990</th>\n",
+       "      <td>27991</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>27991</th>\n",
+       "      <td>27992</td>\n",
        "      <td>6</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
+       "      <th>27992</th>\n",
+       "      <td>27993</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>27993</th>\n",
+       "      <td>27994</td>\n",
        "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27994</th>\n",
+       "      <td>27995</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27995</th>\n",
+       "      <td>27996</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27996</th>\n",
+       "      <td>27997</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27997</th>\n",
+       "      <td>27998</td>\n",
        "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27998</th>\n",
+       "      <td>27999</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27999</th>\n",
+       "      <td>28000</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ImageId  Label\n",
-       "0        0      2\n",
-       "1        1      0\n",
-       "2        2      9\n",
-       "3        3      9\n",
-       "4        4      3\n",
-       "5        5      7\n",
-       "6        6      0\n",
-       "7        7      3\n",
-       "8        8      0\n",
-       "9        9      3"
+       "       ImageId  Label\n",
+       "27990    27991      7\n",
+       "27991    27992      6\n",
+       "27992    27993      1\n",
+       "27993    27994      9\n",
+       "27994    27995      7\n",
+       "27995    27996      9\n",
+       "27996    27997      7\n",
+       "27997    27998      3\n",
+       "27998    27999      9\n",
+       "27999    28000      2"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,16 +575,16 @@
    "source": [
     "import pandas as pd\n",
     "classes_df = pd.DataFrame.from_records(final_classes, columns=['ImageId', 'Label'])\n",
-    "classes_df.head(10)"
+    "classes_df.tail(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes_df.to_csv(\"mnist-submission.csv\")"
+    "classes_df.to_csv(\"mnist-submission.csv\", index=False)"
    ]
   },
   {
