[Whale] Fix one hot encoding

--- a/WhaleWhaleWhale/Whale Tail.ipynb
+++ b/WhaleWhaleWhale/Whale Tail.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 213,
    "metadata": {
     "scrolled": false
    },
@@ -2495,51 +2495,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new_whale    810\n",
-      "w_0013924      3\n",
-      "w_001ebbc      1\n",
-      "w_002222a      2\n",
-      "w_002b682      1\n",
-      "w_002dc11      1\n",
-      "w_0087fdd      2\n",
-      "w_008c602      1\n",
-      "w_009dc00      2\n",
-      "w_00b621b      2\n",
-      "w_00c4901      1\n",
-      "w_00cb685      3\n",
-      "w_00d8453      1\n",
-      "w_00fbb4e      2\n",
-      "w_0103030      1\n",
-      "w_010a1fa      2\n",
-      "w_011d4b5      2\n",
-      "w_0122d85      1\n",
-      "w_01319fa      1\n",
-      "w_0134192      1\n",
-      "w_013bbcf      1\n",
-      "w_014250a      2\n",
-      "w_014a645      1\n",
-      "w_0156f27      1\n",
-      "w_015c991      1\n",
-      "w_015e3cf      1\n",
-      "w_01687a8      2\n",
-      "w_0175a35      1\n",
-      "w_018bc64      1\n",
-      "w_01a4234      1\n",
-      "Name: Id, dtype: int64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "new_whale    810\n",
+       "w_0013924      3\n",
+       "w_001ebbc      1\n",
+       "w_002222a      2\n",
+       "w_002b682      1\n",
+       "w_002dc11      1\n",
+       "w_0087fdd      2\n",
+       "w_008c602      1\n",
+       "w_009dc00      2\n",
+       "w_00b621b      2\n",
+       "w_00c4901      1\n",
+       "w_00cb685      3\n",
+       "w_00d8453      1\n",
+       "w_00fbb4e      2\n",
+       "w_0103030      1\n",
+       "w_010a1fa      2\n",
+       "w_011d4b5      2\n",
+       "w_0122d85      1\n",
+       "w_01319fa      1\n",
+       "w_0134192      1\n",
+       "w_013bbcf      1\n",
+       "w_014250a      2\n",
+       "w_014a645      1\n",
+       "w_0156f27      1\n",
+       "w_015c991      1\n",
+       "w_015e3cf      1\n",
+       "w_01687a8      2\n",
+       "w_0175a35      1\n",
+       "w_018bc64      1\n",
+       "w_01a4234      1\n",
+       "Name: Id, dtype: int64"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "new_df = pd.value_counts(train_data.Id).sort_index()\n",
     "new_df.columns = ['Id', 'frequency']\n",
-    "print (new_df[:30])"
+    "new_df.head(30)"
    ]
   },
   {
@@ -2548,107 +2551,36 @@
    "source": [
     "## One hot encoding\n",
     "\n",
-    "The labels, `w_0265cb6`, `w_029013f` are string values and need to be one-hot encoded so that our network can train on them"
+    "The labels, `w_0265cb6`, `w_029013f` are string values and need to be one-hot encoded so that our network can train on them.\n",
+    "\n",
+    "`LabelEncoder` + `OneHotEncoder` = `LabelBinarizer`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['w_e15442c' 'w_1287fbc' 'w_da2efe0' 'w_19e5482' 'w_f22f3e3' 'w_8b1ca89'\n",
-      " 'w_eaad6a8' 'new_whale' 'w_3d0bc7a' 'w_50db782']\n",
       "[[0 0 0 ... 0 0 0]\n",
       " [0 0 0 ... 0 0 0]\n",
       " [0 0 0 ... 0 0 0]\n",
       " ...\n",
       " [0 0 0 ... 0 0 0]\n",
       " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n",
-      "  (0, 0)\t1.0\n",
-      "  (1, 0)\t1.0\n",
-      "  (2, 0)\t1.0\n",
-      "  (3, 0)\t1.0\n",
-      "  (4, 0)\t1.0\n",
-      "  (5, 0)\t1.0\n",
-      "  (6, 0)\t1.0\n",
-      "  (7, 0)\t1.0\n",
-      "  (8, 0)\t1.0\n",
-      "  (9, 0)\t1.0\n",
-      "  (10, 0)\t1.0\n",
-      "  (11, 0)\t1.0\n",
-      "  (12, 0)\t1.0\n",
-      "  (13, 0)\t1.0\n",
-      "  (14, 0)\t1.0\n",
-      "  (15, 0)\t1.0\n",
-      "  (16, 0)\t1.0\n",
-      "  (17, 0)\t1.0\n",
-      "  (18, 0)\t1.0\n",
-      "  (19, 0)\t1.0\n",
-      "  (20, 0)\t1.0\n",
-      "  (21, 0)\t1.0\n",
-      "  (22, 0)\t1.0\n",
-      "  (23, 0)\t1.0\n",
-      "  (24, 0)\t1.0\n",
-      "  :\t:\n",
-      "  (41872325, 0)\t1.0\n",
-      "  (41872326, 0)\t1.0\n",
-      "  (41872327, 0)\t1.0\n",
-      "  (41872328, 0)\t1.0\n",
-      "  (41872329, 0)\t1.0\n",
-      "  (41872330, 0)\t1.0\n",
-      "  (41872331, 0)\t1.0\n",
-      "  (41872332, 0)\t1.0\n",
-      "  (41872333, 0)\t1.0\n",
-      "  (41872334, 0)\t1.0\n",
-      "  (41872335, 0)\t1.0\n",
-      "  (41872336, 0)\t1.0\n",
-      "  (41872337, 0)\t1.0\n",
-      "  (41872338, 0)\t1.0\n",
-      "  (41872339, 0)\t1.0\n",
-      "  (41872340, 0)\t1.0\n",
-      "  (41872341, 0)\t1.0\n",
-      "  (41872342, 0)\t1.0\n",
-      "  (41872343, 0)\t1.0\n",
-      "  (41872344, 0)\t1.0\n",
-      "  (41872345, 0)\t1.0\n",
-      "  (41872346, 0)\t1.0\n",
-      "  (41872347, 0)\t1.0\n",
-      "  (41872348, 0)\t1.0\n",
-      "  (41872349, 0)\t1.0\n"
+      " [0 0 0 ... 0 0 0]]\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelBinarizer, OneHotEncoder\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
     "\n",
     "label_binarizer = LabelBinarizer()\n",
-    "classes = label_binarizer.fit_transform(training_labels.T[0])\n",
-    "#print(training_labels.shape)\n",
-    "print(training_labels.T[0][:10])\n",
-    "print(classes)\n",
-    "#print(\"Total number of labels '{}'\\nAll the classes: {}\".format(len(classes)), classes)\n",
-    "\n",
-    "\n",
-    "one_hot = OneHotEncoder()\n",
-    "classes = one_hot.fit_transform(classes.reshape(-1, 1))\n",
-    "print(classes)\n",
-    "\n",
-    "# for index, item in new_df.iterrows():\n",
-    "#     print(item[\"Id\"])\n",
-    "\n",
-    "# from keras.utils import to_categorical\n",
-    "\n",
-    "# print(\"Before one-hot encoding:\\n {}\".format(training_labels[:10]))\n",
-    "\n",
-    "# training_labels = to_categorical(training_labels)\n",
-    "\n",
-    "# print(\"\\n\\nAfter one-hot encoding:\\n {}\".format(training_labels))\n",
-    "#for idx, val in enumerate(map(lambda x : 1/x, ))"
+    "labels = label_binarizer.fit_transform(training_labels.flatten())\n",
+    "print(labels)"
    ]
   },
   {
