[Whale] Disable all analysis and arrange data for fit_generatoe

--- a/WhaleWhaleWhale/Whale Tail.ipynb
+++ b/WhaleWhaleWhale/Whale Tail.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -2459,7 +2459,7 @@
     "from PIL import Image\n",
     "from matplotlib.pyplot import imshow\n",
     "\n",
-    "def read_image(filename, for_preview=False):\n",
+    "def read_image(filename):\n",
     "    # read the image and return a bitmap\n",
     "    pil_im = Image.open(\"train/{}\".format(filename), 'r')\n",
     "    \n",
@@ -2468,10 +2468,10 @@
     "        pil_im = pil_im.convert('RGB')\n",
     "    pil_im = pil_im.resize((224, 224),  Image.ANTIALIAS)\n",
     "    image = np.asarray(pil_im)\n",
-    "    return image/255 if for_preview is False else image\n",
+    "    return image\n",
     "\n",
     "def preview_image(filename):\n",
-    "    image = read_image(filename, True)\n",
+    "    image = read_image(filename)\n",
     "    _, axes = plt.subplots()\n",
     "    \n",
     "    plt.title(\"{} {}\".format(filename, image.shape))\n",
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2531,7 @@
        "Name: Id, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2555,7 +2555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2591,11 +2591,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2605,9 +2612,9 @@
       "=================================================================\n",
       "resnet50 (Model)             (None, 1, 1, 2048)        23587712  \n",
       "_________________________________________________________________\n",
-      "flatten_7 (Flatten)          (None, 2048)              0         \n",
+      "flatten_1 (Flatten)          (None, 2048)              0         \n",
       "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 4251)              8710299   \n",
+      "dense_1 (Dense)              (None, 4251)              8710299   \n",
       "=================================================================\n",
       "Total params: 32,298,011\n",
       "Trainable params: 32,231,131\n",
@@ -2644,75 +2651,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9850,) (9850, 4251)\n",
-      "(7880,) (1970,) (7880, 4251) (1970, 4251)\n",
-      "Epoch 1/3\n",
-      "246/246 [==============================] - 305s 1s/step - loss: 8.4931 - acc: 0.0831 - val_loss: 14.8878 - val_acc: 0.0763\n",
-      "Epoch 2/3\n",
-      "246/246 [==============================] - 285s 1s/step - loss: 8.0223 - acc: 0.0838 - val_loss: 8.5709 - val_acc: 0.0763\n",
-      "Epoch 3/3\n",
-      "246/246 [==============================] - 285s 1s/step - loss: 7.9199 - acc: 0.0837 - val_loss: 8.6364 - val_acc: 0.0763\n"
+      "['w_e15442c' 'w_1287fbc' 'w_da2efe0' 'w_19e5482' 'w_f22f3e3' 'w_8b1ca89'\n",
+      " 'w_eaad6a8' 'new_whale' 'w_3d0bc7a' 'w_50db782']\n",
+      "(7880,) (1970,) (7880,) (1970,)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f24a593ab70>"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "print(training_values.shape, labels.shape)\n",
-    "X_train, X_val, Y_train, Y_val = train_test_split(training_values, labels, test_size=0.2, random_state=2)\n",
+    "training_labels = training_labels.reshape(-1)\n",
+    "print(training_labels[:10])\n",
+    "X_train, X_val, Y_train, Y_val = train_test_split(training_values, training_labels, test_size=0.2, random_state=2)\n",
     "print(X_train.shape, X_val.shape, Y_train.shape, Y_val.shape)\n",
     "\n",
-    "class LossHistory(Callback):\n",
-    "    def on_train_begin(self, logs={}):\n",
-    "        self.losses = []\n",
+    "import os\n",
+    "import shutil\n",
     "\n",
-    "    def on_batch_end(self, batch, logs={}):\n",
-    "        self.losses.append(logs.get('loss'))\n",
+    "train_data_dir = \"data/train\"\n",
+    "val_data_dir = \"data/val\"\n",
     "\n",
-    "class WhaleGenerator(Sequence):\n",
-    "    def __init__(self, X, Y, title, batch_size=32):\n",
-    "        self.X = X\n",
-    "        self.Y = Y\n",
-    "        self.batch_size = batch_size\n",
-    "        self.title = title\n",
+    "def arrange_files(trainval_data_dir, X, Y):\n",
+    "    for y_class in np.unique(Y):\n",
+    "        y_class_path = \"{}/{}\".format(trainval_data_dir, y_class)\n",
+    "        if not os.path.exists(y_class_path):\n",
+    "            os.makedirs(y_class_path)\n",
+    "    for x, y in zip(X, Y):\n",
+    "        src_path = \"train/{}\".format(x)\n",
+    "        dst_path = \"{}/{}/{}\".format(trainval_data_dir, y, x)\n",
+    "        if not os.path.exists(dst_path):\n",
+    "            shutil.copyfile(src_path, dst_path)\n",
     "        \n",
-    "    def __len__(self):\n",
-    "        return int(np.floor(len(self.X) / self.batch_size))\n",
     "\n",
-    "    def __iter__(self):\n",
-    "        return self\n",
+    "arrange_files(train_data_dir, X_train, Y_train)\n",
+    "arrange_files(val_data_dir, X_val, Y_val)\n",
+    "\n",
+    "        \n",
+    "# img_height, img_width = 224,224\n",
+    "# batch_size=32\n",
+    "\n",
+    "# class LossHistory(Callback):\n",
+    "#     def on_train_begin(self, logs={}):\n",
+    "#         self.losses = []\n",
+    "\n",
+    "#     def on_batch_end(self, batch, logs={}):\n",
+    "#         self.losses.append(logs.get('loss'))\n",
+    "        \n",
+    "# train_datagen = ImageDataGenerator(\n",
+    "#         rescale=1./255,\n",
+    "#         shear_range=0.2,\n",
+    "#         zoom_range=0.2,\n",
+    "#         horizontal_flip=True)\n",
+    "\n",
+    "# val_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "# train_generator = train_datagen.flow_from_directory(\n",
+    "#         \"train\",\n",
+    "#         target_size=(img_height, img_width),\n",
+    "#         batch_size=batch_size,\n",
+    "#         classes=)\n",
+    "\n",
+    "# validation_generator = test_datagen.flow_from_directory(\n",
+    "#         \"train\",\n",
+    "#         target_size=(img_height, img_width),\n",
+    "#         batch_size=batch_size,\n",
+    "#         class_mode='binary')\n",
+    "\n",
+    "\n",
+    "# class WhaleGenerator(Sequence):\n",
+    "#     def __init__(self, X, Y, title, batch_size=32):\n",
+    "#         self.X = X\n",
+    "#         self.Y = Y\n",
+    "#         self.batch_size = batch_size\n",
+    "#         self.title = title\n",
+    "        \n",
+    "#     def __len__(self):\n",
+    "#         return int(np.floor(len(self.X) / self.batch_size))\n",
+    "\n",
+    "#     def __iter__(self):\n",
+    "#         return self\n",
     "    \n",
-    "    def __getitem__(self, index):\n",
-    "        start =index*self.batch_size\n",
-    "        end = (index+1)*self.batch_size\n",
+    "#     def __getitem__(self, index):\n",
+    "#         start =index*self.batch_size\n",
+    "#         end = (index+1)*self.batch_size\n",
     "        \n",
-    "        batch_x, batch_y = np.array([read_image(x) for x in self.X[start : end]]), self.Y[start : end]\n",
-    "        return batch_x, batch_y\n",
+    "#         batch_x, batch_y = np.array([read_image(x) for x in self.X[start : end]]), self.Y[start : end]\n",
+    "#         return batch_x, batch_y\n",
     "\n",
     "\n",
-    "checkpoint = ModelCheckpoint(\"./best.hdf5\", monitor='val_acc', save_best_only=True,  mode='max')\n",
-    "history = LossHistory()\n",
+    "# checkpoint = ModelCheckpoint(\"./best.hdf5\", monitor='val_acc', save_best_only=True,  mode='max')\n",
+    "# history = LossHistory()\n",
     "\n",
     "\n",
-    "model.fit_generator(WhaleGenerator(X_train, Y_train, \"Train\"), epochs=3, \\\n",
-    "        validation_data=WhaleGenerator(X_val, Y_val, \"Val\"), callbacks=[checkpoint, history])"
+    "# model.fit_generator(WhaleGenerator(X_train, Y_train, \"Train\"), epochs=3, \\\n",
+    "#         validation_data=WhaleGenerator(X_val, Y_val, \"Val\"), callbacks=[checkpoint, history])"
    ]
   },
   {
